# Syracuse_CSE681_Software_Modeling

./: LICENSE  README.md
Module_01_Modeling_Basics/: HelloWorld.als  HelloWorld.java  HelloWorld.sysml  README.md  requirements.txt
Module_02_Message_Passing/: docker-compose.yml  run_demo.sh
Module_02_Message_Passing/consumer/: Dockerfile  app.py
Module_02_Message_Passing/publisher/: app.py
Module_03_Resilient_Software/: Cargo.toml  README.md  buffer_overflow.cpp  buffer_safe.rs  data_race.cpp  memory_safe.rs  null_pointer.cpp  option_safe.rs  thread_safe.rs  use_after_free.cpp
Module_05_Contracts/: PaymentInteraction.sysml  README.md
Module_05_Contracts/InterfaceContractDemo/: InterfaceContract.cs  Program.cs  SimpleContractImplementer.cs
Module_05_Contracts/PaymentProcessorSolution/: Program.cs
Module_05_Contracts/PaymentProcessorSolution/Contracts/: IPaymentProcessor.cs
Module_05_Contracts/PaymentProcessorSolution/Models/: PaymentRequest.cs
Module_05_Contracts/PaymentProcessorSolution/Services/: PaymentProcessor.cs
Module_06_GUI/: events.html  layout_panels.html
Module_07_MultiThreading/: Program.cs
Module_09_Asynch_Programming/AsynchBreakfast/: Program.cs
Module_09_Asynch_Programming/SerialBreakfast/: Program.cs
